package 策略模式;

public interface IStrategy {
    public void operate();
}
