@startuml
class Client{
+ {static} void main(String[] args);
}
note left of Client:使用场景，调用上下文


interface IStrategy{
+ void operate();
}

note left of IStrategy:策略接口

class Strategy1 implements IStrategy{
+ void operate();
}

class Strategy2 implements IStrategy{
+ void operate();
}

class Strategy3 implements IStrategy{
+ void operate();
}

note bottom of Strategy1:具体策略实现

class Context{
- IStrategy iStrategy;
+ Context(IStrategy iStrategy);
+ void operate();
}

note top of Context:挑选策略的上下文



IStrategy <.. Context

Context <.. Client




@enduml